# graph-expressiveness

./: .gitignore  README.md  clean.sh  clear.bat  requirements.txt  run.bat  run.sh
.run/: Graph Explorer.run.xml
api/: models.py  pyproject.toml
api/services/: source.py  visualizer.py
api/src/services/: source_plugin.py  visualizer_plugin.py
api/src/types/: graph.py  param.py
block_visualizer/: pyproject.toml
block_visualizer/src/plugin/: block_visualization.html  block_visualizer.py  visualizer.py
core/: pyproject.toml
core/src/models/: edge.py  graph.py  node.py  plugin.py  tree.py
core/src/static/: tree.js  tree_view.html
core/src/use_cases/: load_plugins.py  loader.py  main_view.py  tree_view.py  tree_view_template.html
data_source_ethereum/: pyproject.toml
data_source_ethereum/src/plugin/: data_source.py  eth_data_source.py  get_block.py
data_source_github/: pyproject.toml
data_source_github/src/plugin/: github_data_source.py
data_source_twitter/: pyproject.toml
graph_explorer/app/: apps.py  urls.py  views.py
graph_explorer/app/static/: style.css
graph_explorer/app/static/core/: style.css
graph_explorer/app/templates/: base.html  bird_view.html  index.html  main_view.html  simple_view.html  tree_view.html
graph_explorer/graph_explorer/: settings.py  urls.py
graph_explorer/plugin/core/: views.py
graph_explorer/plugin/core/static/core/: style.css
graph_explorer/plugin/core/templates/: graph_view.html  index.html
graph_explorer/saved_graphs/: -200393743816781783.pkl  -6432865902512534983.pkl  2847936158983203860.pkl  7296423296778673934.pkl  8947731755352899177.pkl  git3.pkl  git3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.pkl  gitkum3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.pkl  gitkumara2.pkl
simple_visualizer/: pyproject.toml
simple_visualizer/src/plugin/: simple_view.html  simple_visualization.html  simple_visualizer.py  visualizer.py
