[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-explorer-simple-visualizer"
authors = [
    {name = "Nemanja Stjepanovic"}
]
description = "Twitter data source plugin for graph explorer"
requires-python = ">=3.7"
version = "0.1"
dependencies = [
    "jinja2>=3.1.2"
]

[project.scripts]

[project.entry-points."graph.visualizers"]
load = "plugin.simple_visualizer"